# CertChain

./: .env  .env.example  .gitignore  README.md  check_solana_account.js  create_cert_anchor.ts  deploy.sh  docker-compose.yml  install.bat  install_linux.sh  package-lock.json  package.json  run.bat  run_linux.sh
backend/: .gitignore  readme.md
backend/blockchain/client/: baseAPI.py  config.py  main.py  requirements.txt
backend/blockchain/client/hotaSolana/: bs58.py  ed25519.py  hotaSolanaData.py  hotaSolanaDataBase.py  hotaSolanaMeathod.py
backend/blockchain/client/solathon/: __init__.py  async_client.py  client.py  publickey.py  transaction.py
backend/blockchain/client/venv_linux/: pyvenv.cfg
backend/blockchain/solana/anchor/: Anchor.toml  Cargo.toml  auto_fix_anchor.py  lib.rs
backend/blockchain/solana/anchor/programs/certchain/: Cargo.toml
backend/blockchain/solana/anchor/programs/certchain/src/: lib.rs
backend/blockchain/solana/anchor/programs/certchain/src/dot/: program.rs
backend/blockchain/solana/seahorse/: main.py
backend/blockchain/solana/test/: test.ts
blockchain/client/hotaSolana/: hotaSolanaData.py  hotaSolanaDataBase.py  hotaSolanaMeathod.py
blockchain/solana/anchor/: lib.rs
blockchain/solana/seahorse/: main.py
prisma/: schema.prisma
prisma/migrations/20240814174527_init_db/: migration.sql
src/action/: certificate.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Logo.tsx  NavBar.tsx
src/lib/: phantom-wallet.tsx
src/lib/idl/: certchain.json
src/schemas/: form.ts
(+11 files in other folders)
